// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should render a default selector appropriately 1`] = `<withProps(Selector) />`;

exports[`Selector should render a disabled selector appropriately 1`] = `
<withProps(Selector)
  disabled={true}
/>
`;

exports[`Selector should render a selected selector appropriately 1`] = `
<withProps(Selector)
  selected={true}
/>
`;
